# test_tasks

./: f.csv  pyproject.toml  test.py  слова.txt
